static/css/custom.css
.badge-container{
  text-align: center;
}
.badge-container ul{
  list-style: none;
  padding: 0;
}

.badge-container ul li{
  display: inline;
}

nav.navigation{
  position: fixed;
  background-color: white;
}

@media (max-width: 568px) {
  .badge-container ul li a img.badge{
    background-color: black;
    padding: 16px;
    border-radius: 33px;
    height: 90px;
    width: 90px;
    margin: 0px;
    background: radial-gradient(circle at 56px 137px, #fff, #eee)
  }
}

@media (min-width: 720px) {
  .badge-container ul li a img.badge{
    background-color: black;
    padding: 16px;
    border-radius: 33px;
    height: 90px;
    width: 90px;
    margin: 5px;
    background: radial-gradient(circle at 56px 137px, #fff, #eee)
  }
}

li.list-item{
  height: 48px;
  display: inline-block;
  vertical-align: middle;
}

li.list-item img.list-logo{
  width: 25px;
  position: absolute;
  z-index: -1;
}

li.list-item a{
  padding-left: 35px;
}

header i.fa-link{
  color: gray;
}

.form-style-7{
  width: 100%;
  border-radius:2px;
  font-family: Georgia, "Times New Roman", Times, serif;
}
.form-style-7 h1{
  display: block;
  text-align: center;
  padding: 0;
  margin: 0px 0px 20px 0px;
  color: #5C5C5C;
  font-size:x-large;
}
.form-style-7 ul{
  list-style:none;
  padding:0;
  margin:0;   
}
.form-style-7 li{
  display: block;
  padding: 9px;
  border:1px solid #DDDDDD;
  margin-bottom: 30px;
  border-radius: 3px;
}
.form-style-7 li:last-child{
  border:none;
  margin-bottom: 0px;
  text-align: center;
}
.form-style-7 li > label{
  display: block;
  float: left;
  margin-top: -19px;
  background: #FAFAFA;
  height: 25px;
  padding: 2px 5px 2px 5px;
  color: #B9B9B9;
  font-size: 14px;
  overflow: hidden;
  font-family: Arial, Helvetica, sans-serif;
}
.form-style-7 input[type="text"],
.form-style-7 input[type="date"],
.form-style-7 input[type="datetime"],
.form-style-7 input[type="email"],
.form-style-7 input[type="number"],
.form-style-7 input[type="search"],
.form-style-7 input[type="time"],
.form-style-7 input[type="url"],
.form-style-7 input[type="password"],
.form-style-7 textarea,
.form-style-7 select 
{
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  width: 100%;
  display: block;
  outline: none;
  border: none;
  height: 25px;
  line-height: 25px;
  font-size: 16px;
  padding: 0;
  font-family: Georgia, "Times New Roman", Times, serif;
}
.form-style-7 input[type="text"]:focus,
.form-style-7 input[type="date"]:focus,
.form-style-7 input[type="datetime"]:focus,
.form-style-7 input[type="email"]:focus,
.form-style-7 input[type="number"]:focus,
.form-style-7 input[type="search"]:focus,
.form-style-7 input[type="time"]:focus,
.form-style-7 input[type="url"]:focus,
.form-style-7 input[type="password"]:focus,
.form-style-7 textarea:focus,
.form-style-7 select:focus 
{
}
.form-style-7 li > span{
  background: #F3F3F3;
  display: block;
  padding: 3px;
  margin: 0 -9px -9px -9px;
  text-align: center;
  color: #C0C0C0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 11px;
}
.form-style-7 input[type="submit"],
.form-style-7 input[type="button"]{
  border: none;
  padding: 10px 20px 10px 20px;
  border-bottom: 3px solid #000;
  border-radius: 3px;
  background-color: #FAFAFA;
  color: #000;
}
.form-style-7 input[type="submit"]:hover,
.form-style-7 input[type="button"]:hover{
  color:#9e9e9e;
  cursor: pointer;
}

